<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GeneralActivity">

    <item
        android:id="@+id/find_room"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/find_room"
        android:contentDescription="@string/content_description_find_room"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_room"
        android:orderInCategory="0"
        android:icon="@drawable/ic_baseline_add_room_24"
        android:title="@string/add_room"
        android:contentDescription="@string/content_description_add_room"
        app:showAsAction="ifRoom" />

</menu>