<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_rooms">

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.adzteam.urbook.general.ui.friends.FriendsFragment"
        android:label="@string/friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_rooms"
        android:name="com.adzteam.urbook.general.ui.rooms.RoomsFragment"
        android:label="@string/title_rooms"
        tools:layout="@layout/fragment_rooms" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.adzteam.urbook.general.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>