<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".general.ui.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_profile_app_bar"
            app:title="@string/profile_title"
            app:titleTextColor="@color/colorAccent"
            android:background="@color/colorPrimary"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:src="@drawable/profile_image" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/profile_name"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/profile_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/profile_status"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimaryDark"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editProfileBtn"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit_profile"
                android:textColor="@color/colorAccentLight"
                app:strokeColor="@color/colorAccentLight"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <View
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/email_profile_text"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:text="@string/email_profile_text"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/email_profile"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:text="@string/email_profile"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/password_profile_text"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:text="@string/password_profile_text"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/password_profile"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:text="@string/password_profile"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="#000000"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>